# bbsgroupsig-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/denseidentity/bbsgs_android_wrapper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/denseidentity/bbsgs_android_wrapper/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/denseidentity/bbsgs_android_wrapper/: ExampleUnitTest.kt
bbsgslib/: build.gradle.kts
bbsgslib/src/androidTest/java/io/github/denseidentity/bbsgroupsig/: ExampleInstrumentedTest.kt
bbsgslib/src/main/cpp/: CMakeLists.txt
bbsgslib/src/main/java/io/github/denseidentity/bbsgroupsig/: BBSGS.kt
bbsgslib/src/test/java/io/github/denseidentity/bbsgroupsig/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
